--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@types/chai": "^4.1.7",
+    "@types/lodash": "^4.14.168",
     "@types/mocha": "^5.2.7",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
